import "commons.proto";

package com.corntree.milpa.fly.protocol;

option optimize_for = SPEED;

enum ClientRequestType {
  DUMMY_REQUEST = 0;
  REGIST_REQUEST = 1;
  LOGIN_REQUEST = 2;
}//请求类型

message ClientRequest {
  required ClientRequestType clientRequestType = 1;//请求类型
  optional string token = 2;//请求token
  optional bytes requestData = 3;//请求数据
}// 客户端请求

message DummyRequest {
  required string username = 1;//用户名
  required string password = 2;//密码
  required string email = 3;//注册账号
}// 测试请求

message RegistRequest {
  required string username = 1;//用户名
  required string password = 2;//密码
  required string email = 3;//注册账号
}//注册请求

message LoginRequest {
  required string username = 1;//用户名
  required string password = 2;//密码
  optional int64 playerId = 3;
}//登录请求